Added swagger for render
